--- a/DriveMaster/spindrift-server/pom.xml
+++ b/DriveMaster/spindrift-server/pom.xml
@@ -45,6 +45,17 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.spindrift</groupId>
+            <artifactId>spindrift-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
     </dependencies>
 
 
