--- a/DriveMaster/pom.xml
+++ b/DriveMaster/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.spindrift</groupId>
     <artifactId>DriveMaster</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <modules>
         <module>spindrift-pojo</module>
